fixed alignment on contact page

--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -3,13 +3,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-direction: column;
 }
 
 .contact-form {
-display: flex;
-justify-content: space-around;
-align-items: center;
-flex-direction: column;
+
   input {
     margin: 5px 0;
   }
